# eBookPriceComparison

./: .gitignore  Book.py  Pipfile  README.md  main.py  out.html  pyproject.toml
stores/: AbstractStore.py  BookRepublic.py  Libraccio.py  LibrerieCoop.py  Unilibro.py
utils/: printing.py  utils.py
